	  high-precision timestamps to determine whether it needs to update
	  databases.

	o Timestamps of manual pages are also now stored in the database
	  with high precision and compared accordingly.

	o Files are now ordered by first physical extent before reading
	  them, for substantial performance improvements in operations such
	  as mandb and 'man -K'.

man-db 2.6.7.1 (10 April 2014)
==============================

Major changes since man-db 2.6.7:

	Fixes:
	------

	o Remove test suite dependency on realpath(1).

man-db 2.6.7 (10 April 2014)
============================

Major changes since man-db 2.6.6:

	Fixes:
	------

	o Fix a test failure when configured with --enable-undoc.

	o Run the pager in man's original working directory rather than in
	  the manual hierarchy.  (As a result of this fix, man-db now
	  requires libpipeline >= 1.3.0.)

	o mandb only creates a cache directory tag if the catpath is
	  different from the manpath, since it should only be created in
	  directories that consist entirely of cached information.

man-db 2.6.6 (23 January 2014)
==============================

Major changes since man-db 2.6.5:

	man-db is now revision-controlled using git (http://git-scm.com/).
	See docs/HACKING for the location of the repository.

	Fixes:
	------

	o apropos's --and option now works again; it was broken by the
	  optimisations in 2.6.2.

	o Restore compatibility with Automake 1.10.

	o Improve support for translation of common elements of help
	  messages.

	o Don't issue error messages when the database refers to a page that
	  no longer exists.

	o Pass macro and hyphenation language tags to groff again (broken in
	  2.6.5).

	Improvements:
	-------------

	o ./configure --with-override-dir=OVERRIDE arranges to look for
	  manual pages in DIR/OVERRIDE before each path element DIR.

man-db 2.6.5 (27 June 2013)
===========================

Major changes since man-db 2.6.4:

	Fixes:
	------
