@@ -47,6 +47,8 @@ Major changes since man-db 2.6.7.1:
 	  them, for substantial performance improvements in operations such
 	  as mandb and 'man -K'.
 
+	o 'man -H' shows a better error message if no browser is configured.
+
 man-db 2.6.7.1 (10 April 2014)
 ==============================
 
